<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_recipe_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/photo_height"
                android:contentDescription="@string/recipe_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/recipe_default_image"
                app:layout_collapseMode="parallax"
                android:transitionName="@string/recipe_photo_transition"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/photo_protection_height"
                android:layout_gravity="bottom"
                android:contentDescription=""
                android:src="@drawable/photo_background_protection" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_recipe_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                style="@style/AppTheme.Toolbar"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:fitsSystemWindows="false"
        android:nestedScrollingEnabled="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_view_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_timer_black_24dp"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    tools:text="x min" />

                <TextView
                    android:id="@+id/difficulty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/difficulty"
                    android:textAlignment="center" />

                <ImageView
                    android:id="@+id/add_to_shopping_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/add_to_shopping_cart"
                    android:tint="@android:color/darker_gray"
                    app:srcCompat="@drawable/ic_shopping_basket_white_24dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_view_vertical_margin"
                android:layout_marginEnd="@dimen/default_view_margin"
                android:layout_marginStart="@dimen/default_view_margin"
                android:layout_marginTop="@dimen/default_view_vertical_margin"
                android:text="@string/ingredients"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_view_margin"
                android:layout_marginStart="@dimen/big_margin_start"
                android:lineSpacingExtra="@dimen/text_line_spacing" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_view_vertical_margin"
                android:layout_marginEnd="@dimen/default_view_margin"
                android:layout_marginStart="@dimen/default_view_margin"
                android:layout_marginTop="@dimen/default_view_vertical_margin"
                android:text="@string/steps"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_view_margin"
                android:layout_marginStart="@dimen/big_margin_start"
                android:lineSpacingExtra="@dimen/text_line_spacing" />
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_edit_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/edit_recipe"
        android:onClick="onClickEditRecipe"
        app:srcCompat="@drawable/ic_mode_edit_white_24dp" />
</android.support.design.widget.CoordinatorLayout>