<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/recipe_item_margin"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recipe_card_photo_height"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerCrop"
            android:src="@drawable/recipe_default_image"
            android:transitionName="@string/recipe_photo_transition"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingBottom="@dimen/recipe_card_text_vertical_padding"
            android:paddingEnd="@dimen/recipe_card_text_horizontal_padding"
            android:paddingStart="@dimen/recipe_card_text_horizontal_padding"
            android:paddingTop="@dimen/recipe_card_text_vertical_padding"
            tools:text="@string/recipe" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/recipe_card_text_horizontal_padding"
            android:paddingEnd="@dimen/recipe_card_text_horizontal_padding"
            android:paddingStart="@dimen/recipe_card_text_horizontal_padding">

            <TextView
                android:id="@+id/duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_timer_black_24dp"
                android:drawablePadding="@dimen/recipe_card_icon_padding"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                tools:text="x min" />

            <TextView
                android:id="@+id/difficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                tools:text="Difficulty" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
