<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_recipe_edit"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="@style/AppTheme.Toolbar"
            app:layout_collapseMode="pin" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/photo_height">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.65"
                    android:contentDescription="@string/recipe_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/recipe_default_image"
                    app:layout_collapseMode="parallax" />

                <ImageView
                    android:id="@+id/camera_image"
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/make_a_picture"
                    android:src="@drawable/open_camera" />
            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_view_margin"
                android:layout_marginStart="@dimen/default_view_margin"
                android:layout_marginTop="@dimen/default_view_margin">

                <EditText
                    android:id="@+id/recipe_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_view_margin"
                android:layout_marginStart="@dimen/default_view_margin"
                android:layout_marginTop="@dimen/default_view_margin"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/duration"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:entries="@array/difficulty_values" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_view_margin"
                android:layout_marginStart="@dimen/default_view_margin"
                android:layout_marginTop="@dimen/default_view_margin"
                android:text="@string/ingredients"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <LinearLayout
                android:id="@+id/container_ingredients"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp">

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_view_margin"
                android:layout_marginStart="@dimen/default_view_margin"
                android:layout_marginTop="@dimen/default_view_margin"
                android:text="@string/steps"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <LinearLayout
                android:id="@+id/container_steps"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>